samples/_failures_safe/1761189488_8f56c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffda4c7d.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_ffda4c7d.c:139:9: error: expected expression at end of input
  139 |         case STATE_IDLE: return
      |         ^~~~
./samples/SAFE/__tmp_ffda4c7d.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffda4c7d.c:139:9: error: expected declaration or statement at end of input
